# connect-four

./: README.md  next.config.js  package.json  pnpm-lock.yaml
backend/: .gitignore  Cargo.toml
backend/logic/src/: lib.rs  opening_book.rs  position.rs  solver.rs  trans_table.rs
backend/src/: main.rs
frontend/: next.config.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/analyze/: page.tsx
frontend/src/app/game/: page.tsx
frontend/src/app/online/: page.tsx
frontend/src/components/: NavBar.tsx
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/connect-four/: route.ts
src/components/: NavBar.tsx
src/components/gamboard/: GameBoard.tsx  logic.ts
